--- a/main.html
+++ b/main.html
@@ -1,1 +1,107 @@
-test
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>NeoLite</title>
+  <style>
+    :root { --bg:#fff; --fg:#111; --muted:#6b7280; --border:#e5e7eb; --pill:#f3f4f6; --accent:#111; }
+    *{box-sizing:border-box} html,body{height:100%} body{
+      margin:0; background:var(--bg); color:var(--fg); font:16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Inter, sans-serif;
+      display:flex; flex-direction:column;
+    }
+    header{border-bottom:1px solid var(--border); padding:12px 16px; display:flex; gap:12px; align-items:center; justify-content:space-between; position:sticky; top:0; background:var(--bg); z-index:10}
+    .brand{font-weight:700; letter-spacing:.3px}
+    .toolbar{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
+    select, .pill, button, .toggle {border-radius:999px; border:1px solid var(--border); background:#fff; color:var(--fg)}
+    select{padding:8px 12px; appearance:none}
+    .reasoning{color:#444; background:#f9fafb}
+    .pill{padding:6px 10px; display:inline-flex; align-items:center; gap:8px}
+    .toggle input{display:none}
+    .toggle .knob{width:34px; height:20px; border-radius:999px; position:relative; background:var(--pill); border:1px solid var(--border)}
+    .toggle .knob::after{content:""; position:absolute; top:2px; left:2px; width:14px; height:14px; border-radius:50%; background:#fff; border:1px solid var(--border); transition:.2s}
+    .toggle input:checked + .knob{background:#d1fae5; border-color:#10b981}
+    .toggle input:checked + .knob::after{left:18px}
+    main{flex:1; display:flex; justify-content:center; overflow:auto}
+    .container{width:min(900px, 100%); padding:24px 16px 120px}
+    .bubble{max-width:85%; padding:14px 16px; border:1px solid var(--border); border-radius:18px; margin:8px 0; background:#fff}
+    .ai{background:#f8fafc}
+    .sys{background:#f3f4f6; color:#374151; font-size:14px}
+    .row{display:flex; gap:10px}
+    .row.user{justify-content:flex-end}
+    .row.ai{justify-content:flex-start}
+    .code-embed{border-radius:14px; border:1px solid var(--border); overflow:hidden; margin-top:8px}
+    .code-embed header{display:flex; align-items:center; justify-content:space-between; padding:8px 12px; background:#fafafa; border-bottom:1px solid var(--border)}
+    .status{font-size:12px; color:var(--muted)}
+    pre{margin:0; padding:14px; overflow:auto; background:#fcfcfc}
+    code{font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:13px; white-space:pre-wrap; word-break:break-word}
+    .composer{position:fixed; left:0; right:0; bottom:0; background:linear-gradient(180deg, rgba(255,255,255,0), #fff 10%), #fff; border-top:1px solid var(--border)}
+    .composer .inner{max-width:900px; margin:0 auto; padding:12px 16px; display:flex; gap:8px; align-items:flex-end}
+    .plus{width:38px; height:38px; border-radius:12px; border:1px solid var(--border); display:grid; place-items:center; cursor:pointer; background:#fff}
+    .plus-menu{position:absolute; bottom:60px; left:16px; background:#fff; border:1px solid var(--border); border-radius:14px; padding:10px; display:none; box-shadow:0 10px 30px rgba(0,0,0,.06)}
+    .plus-menu.show{display:block}
+    textarea{flex:1; min-height:44px; max-height:160px; resize:vertical; padding:12px 14px; border-radius:14px; border:1px solid var(--border)}
+    .actions{display:flex; gap:8px; align-items:center}
+    .btn{padding:10px 14px; border-radius:12px; border:1px solid var(--border); background:#fff; cursor:pointer}
+    .btn.primary{background:var(--accent); color:#fff; border-color:var(--accent)}
+    .hint{font-size:12px; color:var(--muted); margin-top:6px}
+    .icon{font-style:normal}
+  </style>
+</head>
+<body>
+  <header>
+    <div class="brand">🧠 NeoLite</div>
+    <div class="toolbar">
+      <select id="model">
+        <option value="openai/gpt-oss-120b" selected>NeoLite-Instant</option>
+        <option value="openai/gpt-4o-mini">NeoLite-Thinking</option>
+        <option value="openai/gpt-4o-reasoner">NeoLite-MultiTasking</option>
+      </select>
+      <select id="reason" class="reasoning" title="Reasoning effort">
+        <option value="low">Reasoning: Low</option>
+        <option value="medium" selected>Reasoning: Medium</option>
+        <option value="high">Reasoning: High</option>
+      </select>
+      <label class="pill toggle" title="Enable web search tools">
+        <input id="websearch" type="checkbox">
+        <span class="knob"></span>
+      </label>
+      <button id="clean" class="pill" title="Start new chat">🧼 Clean</button>
+    </div>
+  </header>
+
+  <main>
+    <div class="container" id="chat">
+      <div class="bubble sys">New chat started. Web Search can be toggled with the “+” button near the composer.</div>
+    </div>
+  </main>
+
+  <div class="composer">
+    <div class="inner">
+      <div style="position:relative">
+        <button class="plus" id="plus" title="More">
+          <span class="icon">+</span>
+        </button>
+        <div class="plus-menu" id="plusMenu">
+          <label class="pill toggle" style="border:none">
+            <input id="websearch2" type="checkbox">
+            <span class="knob"></span>
+            <span> Web Search</span>
+          </label>
+        </div>
+      </div>
+
+      <textarea id="input" placeholder="Ask anything…"></textarea>
+      <div class="actions">
+        <button class="btn" id="stop" style="display:none">Stop</button>
+        <button class="btn primary" id="send">Send</button>
+      </div>
+    </div>
+    <div class="inner" style="padding-top:0">
+      <div class="hint">Tip: Click <b>🧼 Clean</b> to start a new chat. Code replies appear in a nice embed with a “Writing…” status while generating.</div>
+    </div>
+  </div>
+
+  <script src="./app.js"></script>
+</body>
+</html>
