--- a/index.html
+++ b/index.html
@@ -5,100 +5,141 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NeoLite</title>
   <style>
-    :root { --bg:#fff; --fg:#111; --muted:#6b7280; --border:#e5e7eb; --pill:#f3f4f6; --accent:#111; }
-    *{box-sizing:border-box} html,body{height:100%} body{
-      margin:0; background:var(--bg); color:var(--fg); font:16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Inter, sans-serif;
+    :root{
+      --bg:#f3f5f8;
+      --card:#ffffff;
+      --fg:#0f172a;
+      --muted:#6b7280;
+      --border:#e2e8f0;
+      --pill:#eef2f7;
+      --accent:#111827;
+      --link:#2563eb;
+      --success:#10b981;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; background:var(--bg); color:var(--fg);
+      font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,sans-serif;
       display:flex; flex-direction:column;
     }
-    header{border-bottom:1px solid var(--border); padding:12px 16px; display:flex; gap:12px; align-items:center; justify-content:space-between; position:sticky; top:0; background:var(--bg); z-index:10}
-    .brand{font-weight:700; letter-spacing:.3px}
+
+    /* Header (ChatGPT-ish) */
+    header{position:sticky; top:0; z-index:20; background:rgba(255,255,255,.7);
+      backdrop-filter:saturate(180%) blur(10px); border-bottom:1px solid var(--border)}
+    .h-inner{max-width:960px; margin:0 auto; padding:10px 16px;
+      display:flex; gap:10px; align-items:center; justify-content:space-between}
+    .brand{font-weight:700}
     .toolbar{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
-    select, .pill, button, .toggle {border-radius:999px; border:1px solid var(--border); background:#fff; color:var(--fg)}
+    select,.pill,button{border-radius:999px; border:1px solid var(--border); background:#fff; color:var(--fg)}
     select{padding:8px 12px; appearance:none}
-    .reasoning{color:#444; background:#f9fafb}
-    .pill{padding:6px 10px; display:inline-flex; align-items:center; gap:8px}
-    .toggle input{display:none}
-    .toggle .knob{width:34px; height:20px; border-radius:999px; position:relative; background:var(--pill); border:1px solid var(--border)}
-    .toggle .knob::after{content:""; position:absolute; top:2px; left:2px; width:14px; height:14px; border-radius:50%; background:#fff; border:1px solid var(--border); transition:.2s}
-    .toggle input:checked + .knob{background:#d1fae5; border-color:#10b981}
-    .toggle input:checked + .knob::after{left:18px}
+    .reasoning{background:#f3f4f6; color:#374151}
+    .pill{background:#fff; padding:6px 10px}
+    .pill.badge{background:var(--pill); color:#374151; border-color:var(--pill)}
+    .btn{padding:8px 12px; border-radius:12px; border:1px solid var(--border); background:#fff; cursor:pointer}
+    .btn.primary{background:var(--accent); color:#fff; border-color:var(--accent)}
+
     main{flex:1; display:flex; justify-content:center; overflow:auto}
-    .container{width:min(900px, 100%); padding:24px 16px 120px}
-    .bubble{max-width:85%; padding:14px 16px; border:1px solid var(--border); border-radius:18px; margin:8px 0; background:#fff}
-    .ai{background:#f8fafc}
-    .sys{background:#f3f4f6; color:#374151; font-size:14px}
-    .row{display:flex; gap:10px}
+    .container{width:min(960px,100%); padding:24px 16px 140px}
+
+    /* Bubbles */
+    .row{display:flex; gap:10px; margin:10px 0}
     .row.user{justify-content:flex-end}
     .row.ai{justify-content:flex-start}
-    .code-embed{border-radius:14px; border:1px solid var(--border); overflow:hidden; margin-top:8px}
+    .bubble{
+      max-width:85%; background:var(--card); border:1px solid var(--border);
+      border-radius:18px; padding:14px 16px; box-shadow:0 1px 2px rgba(0,0,0,.03)
+    }
+    .sys{background:#f3f4f6; color:#374151}
+    .msg{white-space:pre-wrap; word-break:break-word}
+    a{color:var(--link); text-decoration:none}
+    a:hover{text-decoration:underline}
+
+    /* Source pills */
+    .sources{display:flex; gap:6px; flex-wrap:wrap; margin-bottom:8px}
+    .src-pill{font-size:12px; padding:4px 8px; border-radius:999px; background:#eef6ff; color:#1e40af; border:1px solid #bfdbfe}
+
+    /* Code embed */
+    .code-embed{border-radius:14px; border:1px solid var(--border); overflow:hidden; margin-top:10px}
     .code-embed header{display:flex; align-items:center; justify-content:space-between; padding:8px 12px; background:#fafafa; border-bottom:1px solid var(--border)}
     .status{font-size:12px; color:var(--muted)}
     pre{margin:0; padding:14px; overflow:auto; background:#fcfcfc}
-    code{font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:13px; white-space:pre-wrap; word-break:break-word}
-    .composer{position:fixed; left:0; right:0; bottom:0; background:linear-gradient(180deg, rgba(255,255,255,0), #fff 10%), #fff; border-top:1px solid var(--border)}
-    .composer .inner{max-width:900px; margin:0 auto; padding:12px 16px; display:flex; gap:8px; align-items:flex-end}
-    .plus{width:38px; height:38px; border-radius:12px; border:1px solid var(--border); display:grid; place-items:center; cursor:pointer; background:#fff}
-    .plus-menu{position:absolute; bottom:60px; left:16px; background:#fff; border:1px solid var(--border); border-radius:14px; padding:10px; display:none; box-shadow:0 10px 30px rgba(0,0,0,.06)}
-    .plus-menu.show{display:block}
-    textarea{flex:1; min-height:44px; max-height:160px; resize:vertical; padding:12px 14px; border-radius:14px; border:1px solid var(--border)}
+    code{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace; font-size:13px; white-space:pre; word-break:normal}
+
+    /* Composer */
+    .composer{position:fixed; left:0; right:0; bottom:0;
+      background:linear-gradient(180deg, rgba(243,245,248,0), var(--bg) 14%), var(--bg);
+      border-top:1px solid var(--border)}
+    .c-inner{max-width:960px; margin:0 auto; padding:12px 16px}
+    .compose-row{display:flex; gap:10px; align-items:flex-end}
+    textarea{
+      flex:1; min-height:44px; max-height:180px; resize:vertical;
+      padding:12px 14px; border-radius:16px; border:1px solid var(--border); background:#fff
+    }
     .actions{display:flex; gap:8px; align-items:center}
-    .btn{padding:10px 14px; border-radius:12px; border:1px solid var(--border); background:#fff; cursor:pointer}
-    .btn.primary{background:var(--accent); color:#fff; border-color:var(--accent)}
+
+    /* + menu & toggle (no glitch) */
+    .plus{width:40px; height:40px; border-radius:12px; border:1px solid var(--border);
+      display:grid; place-items:center; cursor:pointer; background:#fff}
+    .menu{position:absolute; bottom:58px; left:0; background:#fff; border:1px solid var(--border);
+      border-radius:14px; padding:10px; display:none; box-shadow:0 10px 30px rgba(0,0,0,.06)}
+    .menu.show{display:block}
+    .toggle{display:flex; align-items:center; gap:8px; cursor:pointer; user-select:none}
+    .switch{position:relative; width:40px; height:22px; border-radius:999px; background:#e5e7eb; border:1px solid var(--border)}
+    .switch::after{content:""; position:absolute; top:2px; left:2px; width:16px; height:16px; border-radius:50%; background:#fff; border:1px solid var(--border); transition:transform .18s}
+    .toggle input{display:none}
+    .toggle input:checked + .switch{background:#d1fae5; border-color:var(--success)}
+    .toggle input:checked + .switch::after{transform:translateX(18px)}
     .hint{font-size:12px; color:var(--muted); margin-top:6px}
-    .icon{font-style:normal}
   </style>
 </head>
 <body>
   <header>
-    <div class="brand">🧠 NeoLite</div>
-    <div class="toolbar">
-      <select id="model">
-        <option value="openai/gpt-oss-120b" selected>NeoLite-Instant</option>
-        <option value="openai/gpt-4o-mini">NeoLite-Thinking</option>
-        <option value="openai/gpt-4o-reasoner">NeoLite-MultiTasking</option>
-      </select>
-      <select id="reason" class="reasoning" title="Reasoning effort">
-        <option value="low">Reasoning: Low</option>
-        <option value="medium" selected>Reasoning: Medium</option>
-        <option value="high">Reasoning: High</option>
-      </select>
-      <label class="pill toggle" title="Enable web search tools">
-        <input id="websearch" type="checkbox">
-        <span class="knob"></span>
-      </label>
-      <button id="clean" class="pill" title="Start new chat">🧼 Clean</button>
+    <div class="h-inner">
+      <div class="brand">🧠 NeoLite</div>
+      <div class="toolbar">
+        <select id="model">
+          <option value="openai/gpt-oss-120b" selected>NeoLite-Instant</option>
+          <option value="openai/gpt-4o-mini">NeoLite-Thinking</option>
+          <option value="openai/gpt-4o-reasoner">NeoLite-MultiTasking</option>
+        </select>
+        <select id="reason" class="reasoning">
+          <option value="low">Reasoning: Low</option>
+          <option value="medium" selected>Reasoning: Medium</option>
+          <option value="high">Reasoning: High</option>
+        </select>
+        <span id="webBadge" class="pill badge" title="Web Search status">Web Search: Off</span>
+        <button id="clean" class="pill" title="Start new chat">🧼 Clean</button>
+      </div>
     </div>
   </header>
 
   <main>
     <div class="container" id="chat">
-      <div class="bubble sys">New chat started. Web Search can be toggled with the “+” button near the composer.</div>
+      <div class="bubble sys">New chat. Use the <b>+</b> to enable Web Search.</div>
     </div>
   </main>
 
   <div class="composer">
-    <div class="inner">
-      <div style="position:relative">
-        <button class="plus" id="plus" title="More">
-          <span class="icon">+</span>
-        </button>
-        <div class="plus-menu" id="plusMenu">
-          <label class="pill toggle" style="border:none">
-            <input id="websearch2" type="checkbox">
-            <span class="knob"></span>
-            <span> Web Search</span>
-          </label>
+    <div class="c-inner">
+      <div class="compose-row">
+        <div style="position:relative">
+          <button class="plus" id="plus" title="More">+</button>
+          <div class="menu" id="plusMenu">
+            <label class="toggle">
+              <input id="webToggle" type="checkbox" />
+              <span class="switch"></span>
+              <span>Web Search</span>
+            </label>
+          </div>
+        </div>
+        <textarea id="input" placeholder="Ask anything…"></textarea>
+        <div class="actions">
+          <button class="btn" id="stop" style="display:none">Stop</button>
+          <button class="btn primary" id="send">Send</button>
         </div>
       </div>
-
-      <textarea id="input" placeholder="Ask anything…"></textarea>
-      <div class="actions">
-        <button class="btn" id="stop" style="display:none">Stop</button>
-        <button class="btn primary" id="send">Send</button>
-      </div>
-    </div>
-    <div class="inner" style="padding-top:0">
-      <div class="hint">Tip: Click <b>🧼 Clean</b> to start a new chat. Code replies appear in a nice embed with a “Writing…” status while generating.</div>
+      <div class="hint">Tip: Click <b>🧼 Clean</b> to start a new chat.</div>
     </div>
   </div>
 
